sqlserver.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: sqlserver
spec:
  volumes:
  - name: sqldata-storage
    persistentVolumeClaim:
      claimName: dbclaim

  containers:
  - image: mcr.microsoft.com/mssql/server
    name: databaseaccount
    volumeMounts:
    - mountPath: "/var/opt/mssql/data"
      name: sqldata-storage
