fictivusaccount.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-svc
  labels:
    run: account-svc
spec:
  type: NodePort
  ports:
  - port: 5004
    nodePort: 30003
    protocol: TCP
  selector:
    run: account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
spec:
  selector:
    matchLabels:
      run: account
  replicas: 1
  template:
    metadata:
      labels:
        run: account
    spec:
      containers:
      - name: account
        image: ghcr.io/robindewitte/gameforum-accountservice:docker
        ports:
        - containerPort: 5004
