fictivusgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
  labels:
    run: gateway-svc
spec:
  type: NodePort
  ports:
  - port: 5001
    nodePort: 30001
    protocol: TCP
  selector:
    run: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      run: gateway
  replicas: 1
  template:
    metadata:
      labels:
        run: gateway
    spec:
      containers:
      - name: gateway
        image: ghcr.io/robindewitte/gameforum-api-gateway:docker
        ports:
        - containerPort: 5001
