fictivustopic.yaml
apiVersion: v1
kind: Service
metadata:
  name: topic-svc
  labels:
    run: topic-svc
spec:
  type: NodePort
  ports:
  - port: 5003
    nodePort: 30002
    protocol: TCP
  selector:
    run: topic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topic
spec:
  selector:
    matchLabels:
      run: topic
  replicas: 1
  template:
    metadata:
      labels:
        run: topic
    spec:
      containers:
      - name: topic
        image: ghcr.io/robindewitte/fictivus_topicservice:docker
        ports:
        - containerPort: 5003
