fictivuswrite.yaml
apiVersion: v1
kind: Service
metadata:
  name: write-svc
  labels:
    run: write-svc
spec:
  type: NodePort
  ports:
  - port: 5000
    nodePort: 30004
    protocol: TCP
  selector:
    run: write
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: write
spec:
  selector:
    matchLabels:
      run: write
  replicas: 1
  template:
    metadata:
      labels:
        run: write
    spec:
      containers:
      - name: write
        image: ghcr.io/robindewitte/gameforum-topic-write:docker
        ports:
        - containerPort: 5000
