frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    run: frontend-svc
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30007
    protocol: TCP
  selector:
    run: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      run: frontend
  replicas: 1
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
      - name: frontend
        image: robindewitte/frontend:frontend0.4.5
        ports:
        - containerPort: 80
