gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
  labels:
    run: gateway-svc
spec:
  ports:
  - port: 8123
    protocol: TCP
  selector:
    run: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      run: gateway
  replicas: 1
  template:
    metadata:
      labels:
        run: gateway
    spec:
      containers:
      - name: gateway
        image: twatter/api-gateway:0.0.5.2
        ports:
        - containerPort: 8123
