sqlservertwo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment2
spec:
  replicas: 1
  selector:
     matchLabels:
       app: mssql2
  template:
    metadata:
      labels:
        app: mssql2
    spec:
      terminationGracePeriodSeconds: 30
      hostname: mssqlinst
      securityContext:
        fsGroup: 10001
      containers:
      - name: mssql2
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1434
        volumeMounts:
        - name: mssqldb2
          mountPath: /var/opt/mssql
      volumes:
      - name: mssqldb2
        persistentVolumeClaim:
          claimName: mssql-data2
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-deployment2
spec:
  selector:
    app: mssql2
  ports:
    - protocol: TCP
      port: 1434
      targetPort: 1434
  type: LoadBalancer
