user.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-svc
  labels:
    run: userservice-svc
spec:
  type: NodePort
  ports:
  - port: 5003
    nodePort: 30002
    protocol: TCP
  selector:
    run: userservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  selector:
    matchLabels:
      run: userservice
  replicas: 1
  template:
    metadata:
      labels:
        run: userservice
    spec:
      containers:
      - name: userservice
        image: robindewitte/userservice:userservice0.1.7
        ports:
        - containerPort: 5003
